RESULTS/AutoSpec/raw_results/out-3.5-NLA_lipus/out-sv-comp-mx/out/half_2_true-unreach-call_0009/half_2_true-unreach-call_merged.txt
/home/dimpling/AutoSpec/out/half_2_true-unreach-call_0009/half_2_true-unreach-call_merged.c:37:3: error: unterminated comment
   37 |   /*@;
      |   ^
